# metadata-cleaner

./: Cargo.toml  README.md  TODO.md
.github/workflows/: rust.yml
src/: cli.rs  error.rs  file_chooser.rs  gui.rs  main.rs  metadata_info.rs  metadata_reader.rs  metadata_writer.rs
