[package]
name = "metadata_cleaner"
version = "0.1.0"
edition = "2024"

[package.metadata]
description = "Metadata Cleaner"
authors = ["takashialpha <takashialpha@protonmail.com>"]
license = "Apache-2.0"

[dependencies]
num-rational = "0.4.2"
num-traits = "0.2.19"
rexiv2 = "0.10.0"

[profile.release]
strip = true
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
debug = false
overflow-checks = false
incremental = false
